# cpp-logger

./: CMakeLists.txt  README.md
docs/: Doxyfile
examples/: example.cpp
include/logger/: ConsoleSink.hpp  FileSink.hpp  Level.hpp  LogSink.hpp  Logger.hpp
include/utils/: TimeUtils.hpp
src/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp
tests/: CMakeLists.txt  test_Logger.cpp
